registration and everything works now
